parsing/piParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from pi.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class piParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, INT_CONSTANT=54, FLOAT_CONSTANT=55, IDENT=56, COMMENT=57, LINE_COMMENT=58, 
		WS=59;
	public const int
		RULE_main = 0, RULE_decl = 1, RULE_declInsideClass = 2, RULE_type = 3, 
		RULE_fnDecl = 4, RULE_classDecl = 5, RULE_beforeFunc = 6, RULE_beforeBranch = 7, 
		RULE_predicate = 8, RULE_formalsOrEmpty = 9, RULE_formals = 10, RULE_var = 11, 
		RULE_varOutSideOfFunc = 12, RULE_paramVar = 13, RULE_stmtBlock = 14, RULE_varDeclOutsideOfFunc = 15, 
		RULE_varDecl = 16, RULE_stmt = 17, RULE_varDeclAndAssign = 18, RULE_ifStmt = 19, 
		RULE_whileStmt = 20, RULE_forCondition = 21, RULE_forStmt = 22, RULE_termination = 23, 
		RULE_terminationArgs = 24, RULE_returnStmt = 25, RULE_breakStmt = 26, 
		RULE_assertStmt = 27, RULE_commaSeperatedListOfVars = 28, RULE_expr = 29, 
		RULE_callInterior = 30, RULE_constant = 31, RULE_annotation = 32, RULE_annotationWithLabel = 33, 
		RULE_annotationPre = 34, RULE_annotationPost = 35;
	public static readonly string[] ruleNames = {
		"main", "decl", "declInsideClass", "type", "fnDecl", "classDecl", "beforeFunc", 
		"beforeBranch", "predicate", "formalsOrEmpty", "formals", "var", "varOutSideOfFunc", 
		"paramVar", "stmtBlock", "varDeclOutsideOfFunc", "varDecl", "stmt", "varDeclAndAssign", 
		"ifStmt", "whileStmt", "forCondition", "forStmt", "termination", "terminationArgs", 
		"returnStmt", "breakStmt", "assertStmt", "commaSeperatedListOfVars", "expr", 
		"callInterior", "constant", "annotation", "annotationWithLabel", "annotationPre", 
		"annotationPost"
	};

	private static readonly string[] _LiteralNames = {
		null, "'int'", "'float'", "'bool'", "'[]'", "'('", "')'", "'void'", "'struct'", 
		"'class'", "'{'", "'}'", "'predicate'", "':='", "';'", "','", "'if'", 
		"'else'", "'while'", "'for'", "'#'", "'return'", "'break'", "'['", "']'", 
		"'new'", "'.'", "'<-'", "'!'", "'-'", "'*'", "'/'", "'div'", "'%'", "'+'", 
		"'<'", "'<='", "'>'", "'>='", "'='", "'!='", "'forall'", "'exists'", "'&&'", 
		"'||'", "'<->'", "'->'", "'|'", "'true'", "'false'", "'@'", "':'", "'@pre'", 
		"'@post'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "INT_CONSTANT", "FLOAT_CONSTANT", 
		"IDENT", "COMMENT", "LINE_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "pi.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static piParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public piParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public piParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MainContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(piParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext[] decl() {
			return GetRuleContexts<DeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclContext decl(int i) {
			return GetRuleContext<DeclContext>(i);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 75;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__11) | (1L << T__19) | (1L << T__51) | (1L << T__52) | (1L << IDENT))) != 0)) {
				{
				{
				State = 72;
				decl();
				}
				}
				State = 77;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 78;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclOutsideOfFuncContext varDeclOutsideOfFunc() {
			return GetRuleContext<VarDeclOutsideOfFuncContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FnDeclContext fnDecl() {
			return GetRuleContext<FnDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDeclContext classDecl() {
			return GetRuleContext<ClassDeclContext>(0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclContext decl() {
		DeclContext _localctx = new DeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_decl);
		try {
			State = 84;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 80;
				varDeclOutsideOfFunc();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 81;
				fnDecl();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 82;
				predicate();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 83;
				classDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclInsideClassContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FnDeclContext fnDecl() {
			return GetRuleContext<FnDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PredicateContext predicate() {
			return GetRuleContext<PredicateContext>(0);
		}
		public DeclInsideClassContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declInsideClass; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclInsideClass(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclInsideClassContext declInsideClass() {
		DeclInsideClassContext _localctx = new DeclInsideClassContext(Context, State);
		EnterRule(_localctx, 4, RULE_declInsideClass);
		try {
			State = 89;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 86;
				varDecl();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 87;
				fnDecl();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 88;
				predicate();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		return type(0);
	}

	private TypeContext type(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		TypeContext _localctx = new TypeContext(Context, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_type, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 96;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				{
				State = 92;
				Match(T__0);
				}
				break;
			case T__1:
				{
				State = 93;
				Match(T__1);
				}
				break;
			case T__2:
				{
				State = 94;
				Match(T__2);
				}
				break;
			case IDENT:
				{
				State = 95;
				Match(IDENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 102;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_type);
					State = 98;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 99;
					Match(T__3);
					}
					} 
				}
				State = 104;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class FnDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BeforeFuncContext beforeFunc() {
			return GetRuleContext<BeforeFuncContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FormalsOrEmptyContext formalsOrEmpty() {
			return GetRuleContext<FormalsOrEmptyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtBlockContext stmtBlock() {
			return GetRuleContext<StmtBlockContext>(0);
		}
		public FnDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fnDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFnDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FnDeclContext fnDecl() {
		FnDeclContext _localctx = new FnDeclContext(Context, State);
		EnterRule(_localctx, 8, RULE_fnDecl);
		try {
			State = 121;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 105;
				beforeFunc();
				State = 106;
				type(0);
				State = 107;
				Match(IDENT);
				State = 108;
				Match(T__4);
				State = 109;
				formalsOrEmpty();
				State = 110;
				Match(T__5);
				State = 111;
				stmtBlock();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 113;
				beforeFunc();
				State = 114;
				Match(T__6);
				State = 115;
				Match(IDENT);
				State = 116;
				Match(T__4);
				State = 117;
				formalsOrEmpty();
				State = 118;
				Match(T__5);
				State = 119;
				stmtBlock();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclInsideClassContext[] declInsideClass() {
			return GetRuleContexts<DeclInsideClassContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclInsideClassContext declInsideClass(int i) {
			return GetRuleContext<DeclInsideClassContext>(i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDeclContext classDecl() {
		ClassDeclContext _localctx = new ClassDeclContext(Context, State);
		EnterRule(_localctx, 10, RULE_classDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			_la = TokenStream.LA(1);
			if ( !(_la==T__7 || _la==T__8) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 124;
			Match(IDENT);
			State = 125;
			Match(T__9);
			State = 129;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__2) | (1L << T__6) | (1L << T__11) | (1L << T__19) | (1L << T__51) | (1L << T__52) | (1L << IDENT))) != 0)) {
				{
				{
				State = 126;
				declInsideClass();
				}
				}
				State = 131;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 132;
			Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BeforeFuncContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TerminationContext termination() {
			return GetRuleContext<TerminationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationPreContext annotationPre() {
			return GetRuleContext<AnnotationPreContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationPostContext annotationPost() {
			return GetRuleContext<AnnotationPostContext>(0);
		}
		public BeforeFuncContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_beforeFunc; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBeforeFunc(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BeforeFuncContext beforeFunc() {
		BeforeFuncContext _localctx = new BeforeFuncContext(Context, State);
		EnterRule(_localctx, 12, RULE_beforeFunc);
		try {
			State = 165;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 135;
				termination();
				State = 136;
				annotationPre();
				State = 137;
				annotationPost();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 139;
				annotationPre();
				State = 140;
				annotationPost();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 142;
				annotationPre();
				State = 143;
				termination();
				State = 144;
				annotationPost();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 146;
				annotationPre();
				State = 147;
				annotationPost();
				State = 148;
				termination();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 150;
				termination();
				State = 151;
				annotationPost();
				State = 152;
				annotationPre();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 154;
				annotationPost();
				State = 155;
				annotationPre();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 157;
				annotationPost();
				State = 158;
				termination();
				State = 159;
				annotationPre();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 161;
				annotationPost();
				State = 162;
				annotationPre();
				State = 163;
				termination();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BeforeBranchContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TerminationContext termination() {
			return GetRuleContext<TerminationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnnotationWithLabelContext annotationWithLabel() {
			return GetRuleContext<AnnotationWithLabelContext>(0);
		}
		public BeforeBranchContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_beforeBranch; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBeforeBranch(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BeforeBranchContext beforeBranch() {
		BeforeBranchContext _localctx = new BeforeBranchContext(Context, State);
		EnterRule(_localctx, 14, RULE_beforeBranch);
		try {
			State = 175;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 168;
				termination();
				State = 169;
				annotationWithLabel();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 171;
				annotationWithLabel();
				State = 172;
				termination();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 174;
				annotationWithLabel();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(piParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public FormalsOrEmptyContext formalsOrEmpty() {
			return GetRuleContext<FormalsOrEmptyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicate; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredicate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PredicateContext predicate() {
		PredicateContext _localctx = new PredicateContext(Context, State);
		EnterRule(_localctx, 16, RULE_predicate);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177;
			Match(T__11);
			State = 178;
			Match(IDENT);
			State = 179;
			Match(T__4);
			State = 180;
			formalsOrEmpty();
			State = 181;
			Match(T__5);
			State = 182;
			Match(T__12);
			State = 183;
			expr(0);
			State = 184;
			Match(T__13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalsOrEmptyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FormalsContext formals() {
			return GetRuleContext<FormalsContext>(0);
		}
		public FormalsOrEmptyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formalsOrEmpty; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormalsOrEmpty(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormalsOrEmptyContext formalsOrEmpty() {
		FormalsOrEmptyContext _localctx = new FormalsOrEmptyContext(Context, State);
		EnterRule(_localctx, 18, RULE_formalsOrEmpty);
		try {
			State = 188;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__5:
				EnterOuterAlt(_localctx, 1);
				{
				}
				break;
			case T__0:
			case T__1:
			case T__2:
			case IDENT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 187;
				formals(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FormalsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParamVarContext paramVar() {
			return GetRuleContext<ParamVarContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FormalsContext formals() {
			return GetRuleContext<FormalsContext>(0);
		}
		public FormalsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_formals; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IpiVisitor<TResult> typedVisitor = visitor as IpiVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFormals(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FormalsContext formals() {
		return formals(0);
	}
